--- a/home.html
+++ b/home.html
@@ -119,10 +119,7 @@
 										</em>
 										<div class="wrap">
 											<p class="resumenNoticia"></p>
-											<a
-												href="detalle.html"
-												class="btn-link fa-angle-right"
-											></a>
+											<a href="#" class="btn-link fa-angle-right"></a>
 										</div>
 									</div>
 								</div>
@@ -140,7 +137,7 @@
 							</div>
 							<div data-src="images/page-1_slide3.jpg">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron">
+									<div class="jumbotron jumbotron3">
 										<em class="tituloNoticia"></em>
 										<div class="wrap">
 											<p class="resumenNoticia"></p>
@@ -149,7 +146,28 @@
 									</div>
 								</div>
 							</div>
-							
+							<div data-src="images/page-1_slide3.jpg">
+								<div class="camera_caption fadeIn">
+									<div class="jumbotron jumbotron4">
+										<em class="tituloNoticia"></em>
+										<div class="wrap">
+											<p class="resumenNoticia"></p>
+											<a href="#" class="btn-link fa-angle-right"></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div data-src="images/page-1_slide3.jpg">
+								<div class="camera_caption fadeIn">
+									<div class="jumbotron jumbotron4">
+										<em class="tituloNoticia"></em>
+										<div class="wrap">
+											<p class="resumenNoticia"></p>
+											<a href="#" class="btn-link fa-angle-right"></a>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
