INICIO redirecciona correctamente

--- a/detalle.html
+++ b/detalle.html
@@ -68,7 +68,7 @@
 									data-type="navbar"
 								>
 									<li style="list-style: none" class="active">
-										<a href="home.html">INICIO</a>
+										<a href="home.html" id="inicioLink">INICIO</a>
 									</li>
 									<li style="list-style: none">
 										<a href="./">LISTA EMPRESAS</a>
