--- a/detalle.html
+++ b/detalle.html
@@ -81,6 +81,7 @@
 							action="buscador.html"
 							method="GET"
 							accept-charset="utf-8"
+							onsubmit="cargarBuscador()"
 						>
 							<label class="search-form_label">
 								<input
@@ -168,6 +169,7 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/tm-scripts.js"></script>
 		<script src="scripts/detalle.js"></script>
+		<script src="scripts/buscador.js"></script>
 		<!-- </script> -->
 
 		<!-- coded by vitlex -->
