--- a/404.html
+++ b/404.html
@@ -37,20 +37,22 @@
   <!--========================================================
                             HEADER
   =========================================================-->
-   <header>  
-      <div class="container top-sect">
-        <div class="navbar-header">
-          <h1 class="navbar-brand">
-            <a data-type='rd-navbar-brand'  href="./"><small>Denominación <br>Empresa</small></a>
-          </h1>
-          <a class="search-form_toggle" href="#"></a>
-        </div>
+  <header>
+    <div class="container top-sect">
+      <div class="navbar-header">
+        <h1 class="navbar-brand">
+          <a data-type="rd-navbar-brand" href="./"
+            ><small class="denominacion"></small
+          ></a>
+        </h1>
+        <a class="search-form_toggle" href="#"></a>
+      </div>
 
-        <div class="help-box text-right">
-          <p>Telefono</p>
-          <a href="callto:#">800-2345-6789</a>
-          <small><span>Horario:</span>  6am-4pm PST M-Th; &nbsp;6am-3pm PST Fri</small>
-        </div>
+      <div class="help-box text-right">
+        <p>Telefono</p>
+        <a href="callto:#" class="telefono"></a>
+        <small><span class="horarioAtencion">Horario:</span></small>
+      </div>
       </div>
      
 	  <div id="stuck_container" class="stuck_container">
@@ -107,15 +109,16 @@
                             FOOTER
   =========================================================-->
   <footer>
-   <section class="well">
-      <div class="container"> 
-            <p class="rights">
-              Denominación Empresa  &#169; <span id="copyright-year"></span>
-              <a href="index-5.html">Privacy Policy</a>
-              <!-- {%FOOTER_LINK} -->
-            </p>        
-      </div> 
-    </section>    
+		<section class="well1">
+			<div class="container">
+				<p class="rights">
+					<span class="denominacion"></span> &#169;
+					<span id="copyright-year"></span>
+					<a href="index-5.html">Privacy Policy</a>
+					<!-- {%FOOTER_LINK} -->
+				</p>
+			</div>
+		</section>
   </footer>
   </div>
 
