--- a/home.html
+++ b/home.html
@@ -12,15 +12,20 @@
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.css" rel="stylesheet" />
 
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
 		<!-- Links -->
 		<link rel="stylesheet" href="css/camera.css" />
 		<link rel="stylesheet" href="css/search.css" />
 		<link rel="stylesheet" href="css/google-map.css" />
+		<link rel="stylesheet" type="text/css" href="./css/map.css" />
 
 		<!--JS-->
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery-migrate-1.2.1.min.js"></script>
 		<script src="js/rd-smoothscroll.min.js"></script>
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+		<script type="module" src="./scripts/map.js"></script>
 
 		<!--[if lt IE 9]>
 			<div style="clear: both; text-align: center; position: relative">
@@ -202,17 +207,7 @@
 						<h2 class="txt-pr">Donde estamos</h2>
 					</div>
 				</section>
-				<div class="map">
-					<iframe
-						id="ubicacion"
-						src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11270.125646913215!2d-68.83492456656404!3d-32.88154997304907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1615335513448!5m2!1ses-419!2sar"
-						width="1600"
-						height="400"
-						style="border: 0"
-						allowfullscreen=""
-						loading="lazy"
-					></iframe>
-				</div>
+				<div id="map"></div>
 
 				<section class="well1">
 					<div class="container">
@@ -233,5 +228,8 @@
 		<script src="js/tm-scripts.js"></script>
 		<script src="scripts/empresas.js"></script>
 		<script src="scripts/home.js"></script>
+		<!-- prettier-ignore -->
+		<script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
+			({key: "AIzaSyBHw4xgFowelmI7zD7y_quHrFZOKEx3xhk", v: "beta"});</script>
 	</body>
 </html>
