--- a/home.html
+++ b/home.html
@@ -117,9 +117,9 @@
 				<section class="well well1 well1_ins1">
 					<div class="camera_container">
 						<div id="camera" class="camera_wrap">
-							<div data-src="images/page-1_slide1.jpg">
+							<div data-src="images/page-1_slide1.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron1">
+									<div class="jumbotron jumbotron1" style="width: 80%;">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
@@ -130,7 +130,7 @@
 									</div>
 								</div>
 							</div>
-							<div data-src="images/page-1_slide2.jpg">
+							<div data-src="images/page-1_slide2.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
 									<div class="jumbotron jumbotron2">
 										<em>
@@ -143,7 +143,7 @@
 									</div>
 								</div>
 							</div>
-							<div data-src="images/page-1_slide3.jpg">
+							<div data-src="images/page-1_slide3.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
 									<div class="jumbotron jumbotron3">
 										<em>
@@ -156,7 +156,7 @@
 									</div>
 								</div>
 							</div>
-							<div data-src="images/page-1_slide3.jpg">
+							<div data-src="images/page-1_slide3.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
 									<div class="jumbotron jumbotron4">
 										<em>
@@ -169,7 +169,7 @@
 									</div>
 								</div>
 							</div>
-							<div data-src="images/page-1_slide3.jpg">
+							<div data-src="images/page-1_slide3.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
 									<div class="jumbotron jumbotron4">
 										<em>
