--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
 							</div>
 							<div data-src="images/page-1_slide2.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron2">
+									<div class="jumbotron jumbotron2" style="width: 80%;">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
@@ -145,7 +145,7 @@
 							</div>
 							<div data-src="images/page-1_slide3.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron3">
+									<div class="jumbotron jumbotron3" style="width: 80%;">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
@@ -158,7 +158,7 @@
 							</div>
 							<div data-src="images/page-1_slide3.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron4">
+									<div class="jumbotron jumbotron4" style="width: 80%;">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
@@ -171,7 +171,7 @@
 							</div>
 							<div data-src="images/page-1_slide3.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron4">
+									<div class="jumbotron jumbotron4" style="width: 80%;">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
