imagen en detalle de noticia

--- a/detalle.html
+++ b/detalle.html
@@ -111,14 +111,12 @@
 				<section class="well well4">
 					<div class="container">
 						<center>
-							<div
-								id="imagenPrincipal"
-								style="
-									height: 450px;
-									background-repeat: no-repeat;
-									background-size: cover;
-								"
-							>
+							<div id="imagenPrincipal">
+								<img
+									id="imagen"
+									style="height: 450px; width: 100%; object-fit: cover"
+								/>
+
 								<div
 									style="
 										text-align: left;
