--- a/home.html
+++ b/home.html
@@ -117,9 +117,35 @@
 				<section class="well well1 well1_ins1">
 					<div class="camera_container">
 						<div id="camera" class="camera_wrap">
+							<div class="imagen">
+								<div class="camera_caption fadeIn">
+									<div class="jumbotron jumbotron1" style="width: 80%">
+										<em>
+											<a href="detalle.html" class="tituloNoticia"></a>
+										</em>
+										<div class="wrap">
+											<p class="resumenNoticia"></p>
+											<a href="#" class="btn-link fa-angle-right"></a>
+										</div>
+									</div>
+								</div>
+							</div>
 							<div data-src="images/page-1_slide1.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron1" style="width: 80%;">
+									<div class="jumbotron jumbotron2" style="width: 80%">
+										<em>
+											<a href="detalle.html" class="tituloNoticia"></a>
+										</em>
+										<div class="wrap">
+											<p class="resumenNoticia"></p>
+											<a href="#" class="btn-link hov_prime fa-angle-right"></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div data-src="images/page-1_slide1.jpg" class="imagen">
+								<div class="camera_caption fadeIn">
+									<div class="jumbotron jumbotron3" style="width: 80%">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
@@ -132,20 +158,7 @@
 							</div>
 							<div data-src="images/page-1_slide2.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron2" style="width: 80%;">
-										<em>
-											<a href="detalle.html" class="tituloNoticia"></a>
-										</em>
-										<div class="wrap">
-											<p class="resumenNoticia"></p>
-											<a href="#" class="btn-link hov_prime fa-angle-right"></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div data-src="images/page-1_slide3.jpg" class="imagen">
-								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron3" style="width: 80%;">
+									<div class="jumbotron jumbotron4" style="width: 80%">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
@@ -158,20 +171,7 @@
 							</div>
 							<div data-src="images/page-1_slide3.jpg" class="imagen">
 								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron4" style="width: 80%;">
-										<em>
-											<a href="detalle.html" class="tituloNoticia"></a>
-										</em>
-										<div class="wrap">
-											<p class="resumenNoticia"></p>
-											<a href="#" class="btn-link fa-angle-right"></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div data-src="images/page-1_slide3.jpg" class="imagen">
-								<div class="camera_caption fadeIn">
-									<div class="jumbotron jumbotron4" style="width: 80%;">
+									<div class="jumbotron jumbotron4" style="width: 80%">
 										<em>
 											<a href="detalle.html" class="tituloNoticia"></a>
 										</em>
@@ -231,5 +231,10 @@
 		<!-- prettier-ignore -->
 		<script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
 			({key: "AIzaSyBHw4xgFowelmI7zD7y_quHrFZOKEx3xhk", v: "beta"});</script>
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				cargarHome();
+			});
+		</script>
 	</body>
 </html>
